--- a/src/app/pages/organization/masters/list/mastersList.html
+++ b/src/app/pages/organization/masters/list/mastersList.html
@@ -9,13 +9,14 @@
       <span class="select-all-label">Select All</span>
     </label>
     <button type="button" class="btn  btn-icon refresh-button"><i class="ion-refresh"></i></button>
+    <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.showAdd()"><i class="ion-add"></i>Add</button>
     <div class="btn-group" uib-dropdown>
       <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
       </button>
       <ul uib-dropdown-menu>
-        <li><a href>Action</a></li>
-        <li><a href>Another action</a></li>
+        <li><a href>Edit</a></li>
+        <li><a href>Delete</a></li>
         <li><a href>Something else here</a></li>
         <li role="separator" class="divider"></li>
         <li><a href>Separated link</a></li>
