--- a/src/app/pages/organization/masters/masters.html
+++ b/src/app/pages/organization/masters/masters.html
@@ -4,12 +4,10 @@
       <div class="letter-layout">
         <div class="mail-navigation-container" ng-class="{'expanded' : !tabCtrl.navigationCollapsed}">
           <div class="text-center">
-            <button type="button" class="btn btn-default compose-button" ng-click="tabCtrl.showCompose('','','')">
-              Compose
-            </button>
+            <input type="text" class="form-control" ng-model="tabCtrl.menuFilter" id="input01" placeholder="Search">
           </div>
-          <div ng-repeat="t in tabCtrl.tabs" ui-sref-active="active" class="mail-navigation"
-               ui-sref="components.mail.label({label: t.label})" ng-click="selectTab(t.label)">
+          <div ng-repeat="t in tabCtrl.tabs| filter: {name: tabCtrl.menuFilter}" ui-sref-active="active" class="mail-navigation"
+               ui-sref="organization.masters.label({label: t.label})" ng-click="selectTab(t.label)">
             {{t.name}}<span class="new-mails" ng-show="t.newMails">{{t.newMails}}</span>
           </div>
           <div class="labels">
