added org masters:dj

--- a/src/app/pages/organization/masters/detail/mastersDetail.html
+++ b/src/app/pages/organization/masters/detail/mastersDetail.html
@@ -5,7 +5,7 @@
         <a href class="collapse-navigation-link ion-navicon"
            ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
       </div>
-      <button ui-sref="components.mail.label({label : detailCtrl.label})"  type="button" class="back-button btn btn-default btn-with-icon"><i
+      <button ui-sref="organization.masters.label({pageId : detailCtrl.pageId})"  type="button" class="back-button btn btn-default btn-with-icon"><i
           class="ion-chevron-left"></i>Back
       </button>
     </div>
