--- a/src/app/pages/organization/masters/list/mastersList.html
+++ b/src/app/pages/organization/masters/list/mastersList.html
@@ -1,8 +1,7 @@
 <div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
   <div class="mail-messages-control side-message-navigation-item">
     <div class="toggle-navigation-container">
-      <a href class="collapse-navigation-link ion-navicon"
-         ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
+      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
     </div>
     <label class="checkbox-inline custom-checkbox nowrap">
       <input type="checkbox" id="inlineCheckbox01" value="option1">
@@ -23,37 +22,5 @@
       </ul>
     </div>
   </div>
-  <div class="messages">
-    <table>
-      <tr ng-repeat="m in listCtrl.messages track by m.id | orderBy:'-date'"
-          class="side-message-navigation-item little-human shineHover {{m.tag}}">
-        <td class="check-td">
-          <div class="mail-checkbox">
-            <label class="checkbox-inline custom-checkbox nowrap">
-              <input type="checkbox">
-              <span></span>
-            </label>
-          </div>
-        </td>
-        <td  class="photo-td" ui-sref="components.mail.detail({id: m.id, label: listCtrl.label})"><img ng-src="{{m.name.split(' ')[0] | profilePicture}}" class="little-human-picture"></td>
-        <td  ui-sref="components.mail.detail({id: m.id, label: listCtrl.label})">
-          <div class="name-container">
-            <div><span class="name">{{m.name}}</span></div>
-            <div><span class="tag label label-primary {{m.tag}}">{{m.tag}}</span></div>
-          </div>
-        </td>
-        <td  ui-sref="components.mail.detail({id: m.id, label: listCtrl.label})">
-          <div class="additional-info">
-            <span class="subject"> {{m.subject}}</span>
-          </div>
-        </td>
-        <td  ui-sref="components.mail.detail({id: m.id, label: listCtrl.label})">
-          <div class="mail-body-part">{{m.body | plainText}}</div>
-        </td>
-        <td class="date">
-          <span>{{m.date | date : 'MMM d HH:mm'}}</span>
-        </td>
-      </tr>
-    </table>
-  </div>
+  <ng-include src="templateUrl()"></ng-include>
 </div>
