--- a/src/app/pages/organization/masters/templates/grades/grades-list.html
+++ b/src/app/pages/organization/masters/templates/grades/grades-list.html
@@ -2,7 +2,8 @@
     <thead>
         <tr class="sortable">
             <td class="table-id">Sno</td>
-            <td>Branch</td>
+            <td>Grade Name</td>
+            <td>Description</td>
             <td class="col-md-3">Actions</td>
         </tr>
     </thead>
@@ -12,8 +13,13 @@
                 {{$index+1}}
             </td>
             <td>
-                <span editable-text="row.BRName" e-name="BRName" e-form="rowform" e-required>
-          {{ row.BRName || 'empty' }}
+                <span editable-text="row.EmpGradeName" e-name="EmpGradeName" e-form="rowform" e-required>
+          {{ row.EmpGradeName || '' }}
+        </span>
+            </td>
+            <td>
+                <span editable-text="row.EmpGradeDesc" e-name="EmpGradeDesc" e-form="rowform" e-required>
+          {{ row.EmpGradeDesc || '' }}
         </span>
             </td>
 
