--- a/src/app/pages/organization/masters/add/add.html
+++ b/src/app/pages/organization/masters/add/add.html
@@ -1,26 +1,15 @@
-<div class="compose-header">
-  <span>
-    New message
-  </span>
-  <span class="header-controls">
-    <i class="ion-minus-round"></i>
-    <i class="ion-arrow-resize"></i>
-    <i ng-click="$dismiss()" class="ion-close-round"></i>
-  </span>
-</div>
-<div>
-  <input type="text" class="form-control compose-input default-color"  placeholder="To" ng-model="boxCtrl.to">
-  <input type="text" class="form-control compose-input default-color"  placeholder="Subject" ng-model="boxCtrl.subject">
-  <div class="compose-container">
-    <text-angular-toolbar ta-toolbar-class="toolbarMain" name="toolbarMain" ta-toolbar="[['h1','h2','h3','bold','italics', 'underline', 'justifyLeft', 'justifyCenter', 'justifyRight', 'justifyFull']]"></text-angular-toolbar>
-    <text-angular name="htmlcontent" ta-target-toolbars='toolbarMain,toolbarFooter' ng-model="boxCtrl.text"></text-angular>
-  </div>
-</div>
-<div class="compose-footer clearfix">
-  <button type="button" ng-click="$dismiss()" class="btn btn-send">Send</button>
-  <text-angular-toolbar ta-toolbar-class="toolbarFooter" name="toolbarFooter" ta-toolbar="[['insertLink', 'insertImage', 'html', 'quote','insertVideo']]"></text-angular-toolbar>
-  <div class="footer-controls">
-    <i class="footer-control-first compose-footer-icon ion-arrow-down-b"></i>
-    <i ng-click="$dismiss()" class="compose-footer-icon ion-android-delete"></i>
+<div class="message-container" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
+  <div class="message">
+    <div class="row">
+      <!--<div class="toggle-navigation-container detail-page">
+        <a href class="collapse-navigation-link ion-navicon"
+           ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
+      </div>-->
+      <button ui-sref="organization.masters.label({pageId : addCtrl.pageId})" type="button" class="back-button btn btn-default btn-with-icon"><i
+          class="ion-chevron-left"></i>Back
+      </button>
+    </div>
+    <div class="line"></div>
+    <ng-include src="addCtrl.templateUrl()"></ng-include>
   </div>
 </div>
