--- a/src/app/pages/organization/masters/templates/department/department-list.html
+++ b/src/app/pages/organization/masters/templates/department/department-list.html
@@ -28,9 +28,12 @@
             </td>
         </tr>
     </tbody>
-    <tbody ng-hide="rows.length>0">
+    <tbody ng-show="rows.length<=0&&!isLoaded">
         <tr>
-            <td colspan="3">No branch found</td>
+            <td colspan="4">No {{listCtrl.page.pageinfo.title}} found</td>
         </tr>
+    </tbody>
+    <tbody ng-show="isLoading">
+        <tr><td colspan="4">Loading {{listCtrl.page.pageinfo.title}} Please wait..</td></tr>
     </tbody>
 </table>
