--- a/src/app/pages/organization/masters/templates/designation/designation-list.html
+++ b/src/app/pages/organization/masters/templates/designation/designation-list.html
@@ -38,9 +38,12 @@
             </td>
         </tr>
     </tbody>
-    <tbody ng-hide="rows.length>0">
+    <tbody ng-show="rows.length<=0&&!isLoaded">
         <tr>
-            <td colspan="3">No branch found</td>
+            <td colspan="6">No {{listCtrl.page.pageinfo.title}} found</td>
         </tr>
+    </tbody>
+    <tbody ng-show="isLoading">
+        <tr><td colspan="6">Loading {{listCtrl.page.pageinfo.title}} Please wait..</td></tr>
     </tbody>
 </table>
