--- a/src/app/pages/organization/masters/templates/levels/levels-list.html
+++ b/src/app/pages/organization/masters/templates/levels/levels-list.html
@@ -2,18 +2,24 @@
     <thead>
         <tr class="sortable">
             <td class="table-id">Sno</td>
-            <td>Branch</td>
+            <td>Level Name</td>
+            <td>Description</td>
             <td class="col-md-3">Actions</td>
         </tr>
     </thead>
     <tbody ng-show="rows.length>0">
         <tr ng-repeat="row in rows" class="editable-row">
-            <td >
+            <td>
                 {{$index+1}}
             </td>
             <td>
-                <span editable-text="row.BRName" e-name="BRName" e-form="rowform" e-required>
-          {{ row.BRName || 'empty' }}
+                <span editable-text="row.EmpLevelName" e-name="EmpLevelName" e-form="rowform" e-required>
+          {{ row.EmpLevelName || 'empty' }}
+        </span>
+            </td>
+            <td>
+                <span editable-text="row.EmpLevelDesc" e-name="EmpLevelDesc" e-form="rowform" e-required>
+          {{ row.EmpLevelDesc || 'empty' }}
         </span>
             </td>
 
@@ -22,9 +28,12 @@
             </td>
         </tr>
     </tbody>
-    <tbody ng-hide="rows.length>0">
+    <tbody ng-show="rows.length<=0&&!isLoaded">
         <tr>
-            <td colspan="3">No branch found</td>
+            <td colspan="4">No {{listCtrl.page.pageinfo.title}} found</td>
         </tr>
+    </tbody>
+    <tbody ng-show="isLoading">
+        <tr><td colspan="4">Loading {{listCtrl.page.pageinfo.title}} Please wait..</td></tr>
     </tbody>
 </table>
