--- a/src/app/pages/leave/applications/applications.html
+++ b/src/app/pages/leave/applications/applications.html
@@ -1,40 +1,27 @@
-<div class="row mail-client-container transparent">
-  <div class="col-md-12">
-    <div ba-panel ba-panel-class="xmedium-panel mail-panel">
-      <div class="letter-layout">
-        <div class="mail-navigation-container" ng-class="{'expanded' : !leaveApCtrl.navigationCollapsed}">
-          <div class="text-center">
-            <input type="text" class="form-control" ng-model="leaveApCtrl.menuFilter" id="input01" placeholder="Search">
-          </div>
-          <div ng-repeat="t in leaveApCtrl.tabs| filter: {name: leaveApCtrl.menuFilter}" ui-sref-active="active" class="mail-navigation"
-               ui-sref="organization.masters.label({label: t.label})" ng-click="selectTab(t.label)">
-            {{t.name}}<span class="new-mails" ng-show="t.newMails">{{t.newMails}}</span>
-          </div>
-          <div class="labels">
-            <div class="labels-title">
-
-            </div>
-            <div class="labels-container">
-              <div class="label-item">
-                <span class="tag label work">Work</span>
-              </div>
-              <div class="label-item">
-                <span class="tag label family">Family</span>
-              </div>
-              <div class="label-item">
-                <span class="tag label friend">Friend</span>
-              </div>
-              <div class="label-item">
-                <span class="tag label study">Study</span>
-              </div>
-            </div>
-          </div>
-          <div class="add-label-container">
-            <i class="ion-plus-round"></i><span class="label-input-stub">Add new label</span>
-          </div>
-        </div>
-        <ui-view></ui-view>
-      </div>
+<div class="side-message-navigation" ng-class="{'expanded': tabCtrls.navigationCollapsed}">
+  <div class="mail-messages-control side-message-navigation-item">
+    <div class="toggle-navigation-container">
+      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrls.navigationCollapsed=!tabCtrls.navigationCollapsed"></a>
+    </div>
+    <label class="checkbox-inline custom-checkbox nowrap">
+      <input type="checkbox" id="inlineCheckbox01" value="option1">
+      <span class="select-all-label">Select All</span>
+    </label>
+    <button type="button" class="btn  btn-icon refresh-button"><i class="ion-refresh"></i></button>
+    <button type="button" class="btn  btn-icon refresh-button" ng-click="lmCtrls.showAdd()"><i class="ion-add"></i>Add</button>
+    <div class="btn-group" uib-dropdown>
+      <button type="button" class="btn more-button" uib-dropdown-toggle>
+        More <span class="caret"></span>
+      </button>
+      
+      <ul uib-dropdown-menu>
+        <li><a href>Edit</a></li>
+        <li><a href>Delete</a></li>
+        <li><a href>Something else here</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href>Separated link</a></li>
+      </ul>
     </div>
   </div>
+  <ng-include src="templateUrl()"></ng-include>
 </div>
