--- a/src/app/pages/leave/masters/masters.html
+++ b/src/app/pages/leave/masters/masters.html
@@ -2,13 +2,13 @@
   <div class="col-md-12">
     <div ba-panel ba-panel-class="xmedium-panel mail-panel">
       <div class="letter-layout">
-        <div class="mail-navigation-container" ng-class="{'expanded' : !leaveCtrl.navigationCollapsed}">
+        <!--<div class="mail-navigation-container" ng-class="{'expanded' : !tabCtrl.navigationCollapsed}">
           <div class="text-center">
-            <input type="text" class="form-control" ng-model="leaveCtrl.menuFilter" id="input01" placeholder="Search">
+            <input type="text" class="form-control" ng-model="tabCtrl.menuFilter" id="input01" placeholder="Search">
           </div>
-          <div ng-repeat="t in leaveCtrl.tabs| filter: {name: leaveCtrl.menuFilter}" ui-sref-active="active" class="mail-navigation"
-               ui-sref="organization.masters.label({label: t.label})" ng-click="selectTab(t.label)">
-            {{t.name}}<span class="new-mails" ng-show="t.newMails">{{t.newMails}}</span>
+          <div ng-repeat="t in tabCtrl.tabs| filter: {name: tabCtrl.menuFilter}" ui-sref-active="active" class="mail-navigation"
+               ui-sref="leave.masters.label({pageId: t.id})">
+            {{t.text}}<span class="new-mails" ng-show="t.newMails">{{t.newMails}}</span>
           </div>
           <div class="labels">
             <div class="labels-title">
@@ -32,7 +32,7 @@
           <div class="add-label-container">
             <i class="ion-plus-round"></i><span class="label-input-stub">Add new label</span>
           </div>
-        </div>
+        </div>-->
         <ui-view></ui-view>
       </div>
     </div>
