sort & pagination of table:dj

--- a/src/app/pages/organization/masters/list/action.html
+++ b/src/app/pages/organization/masters/list/action.html
@@ -1,4 +1,4 @@
-<form editable-form name="rowform" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == row">
+<!--<form editable-form name="rowform" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == row">
     <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary editable-table-button btn-xs">
           Save
         </button>
@@ -8,5 +8,5 @@
 </form>
 <div class="buttons" ng-show="!rowform.$visible">
     <button class="btn btn-primary editable-table-button btn-xs" ng-click="rowform.$show()">Edit</button>
-    <!--<button class="btn btn-danger editable-table-button btn-xs" ng-click="removeUser($index)">Delete</button>-->
-</div>
+</div>-->
+<a><i class="fa fa-pencil-square-o"></i></a>
