--- a/src/app/pages/organization/masters/add/add.html
+++ b/src/app/pages/organization/masters/add/add.html
@@ -5,11 +5,14 @@
         <a href class="collapse-navigation-link ion-navicon"
            ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
       </div>-->
-      <button ui-sref="organization.masters.label({pageId : addCtrl.pageId})" type="button" class="back-button btn btn-default btn-with-icon"><i
+      <button ui-sref="organization.masters.list({name:addCtrl.tempName, pageId : addCtrl.pageId})" type="button" class="back-button btn btn-default btn-with-icon"><i
           class="ion-chevron-left"></i>Back
       </button>
+      <span>{{addCtrl.page.pageinfo.tagline}}</span>
+      <i ng-hide="addCtrl.tempLoaded" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
     </div>
     <div class="line"></div>
-    <ng-include src="addCtrl.templateUrl()"></ng-include>
+    <ng-include src="addCtrl.templateUrlPath" onload="addCtrl.tempLoaded=true"></ng-include>
+    <span ng-show="(addCtrl.templateUrlPath=='')">Template URL is empty</span>
   </div>
 </div>
