--- a/src/app/pages/organization/masters/list/mastersList.html
+++ b/src/app/pages/organization/masters/list/mastersList.html
@@ -7,8 +7,8 @@
       <input type="checkbox" id="inlineCheckbox01" value="option1">
       <span class="select-all-label">Select All</span>
     </label>
-    <button type="button" class="btn  btn-icon refresh-button"><i class="ion-refresh"></i></button>
-    <button type="button" class="btn  btn-icon refresh-button" ui-sref="organization.masters.add({pageId: listCtrl.pageId, action:'create'})"><i class="ion-add"></i>Add</button>
+    <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i></button>
+    <button type="button" class="btn  btn-icon refresh-button" ui-sref="organization.masters.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})"><i class="ion-add"></i>Add</button>
     <div class="btn-group" uib-dropdown>
       <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
@@ -23,5 +23,5 @@
     </div>
     <span class="font-bold">{{listCtrl.page.pageinfo.title}}</span>
   </div>
-  <ng-include src="templateUrl()"></ng-include>
+  <ng-include src="listCtrl.templateUrlPath"></ng-include>
 </div>
