--- a/src/app/pages/organization/masters/masters.html
+++ b/src/app/pages/organization/masters/masters.html
@@ -7,7 +7,7 @@
             <input type="text" class="form-control" ng-model="tabCtrl.menuFilter" id="input01" placeholder="Search">
           </div>
           <div ng-repeat="t in tabCtrl.tabs| filter: {name: tabCtrl.menuFilter}" ui-sref-active="active" class="mail-navigation"
-               ui-sref="organization.masters.label({pageId: t.id})">
+           ui-sref="organization.masters.list({name:t.name, pageId: t.id})">
             {{t.text}}<span class="new-mails" ng-show="t.newMails">{{t.newMails}}</span>
           </div>
           <div class="labels">
