--- a/src/app/pages/leave/applications/add/add.html
+++ b/src/app/pages/leave/applications/add/add.html
@@ -1,4 +1,138 @@
-<form class="form-horizontal" name="editForm" ng-submit="appCtrl.saveForm(editForm)">
+<div class="row">
+  <div class="col-md-12">
+    <form class="form-horizontal" name="editForm" ng-submit="appCtrl.saveForm(editForm)">
+      <div ba-panel ba-panel-class="xmedium-panel" ba-panel-title="Employee Leave Application">
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Employee Name</label>
+          <div class="col-sm-4">
+            <select class="form-control selectpicker with-search" data-live-search="true" title="Select Employee" selectpicker ng-model="appCtrl.entity.LEADEmpId"
+              ng-options="opt.value as opt.name for opt in appCtrl.selects.LEADEmpId" required>
+                    </select>
+          </div>
+          <label for="inputEmail3" class="col-sm-2 control-label">Leave Type</label>
+          <div class="col-sm-4">
+            <select class="form-control selectpicker with-search" data-live-search="true" title="Select Leave Type" selectpicker ng-model="appCtrl.entity.LEADLTId"
+              ng-options="opt.value as opt.name for opt in appCtrl.selects.LEADLTId | filter:{LEADEmpId:appCtrl.entity.LEADEmpId}"
+              required>
+                    </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Half Day</label>
+          <div class="col-sm-4">
+
+            <input type="checkbox" ng-model="appCtrl.entity.LeadHalfDay">
+          </div>
+          <label for="inputEmail3" class="col-sm-2 control-label">Comment</label>
+          <div class="col-sm-4">
+
+            <textarea type="text" ng-model="appCtrl.entity.LeadComment" class="form-control" placeholder="Enter Comment" />
+            {{appCtrl.entity.LeadComment}}
+
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">From Date</label>
+          <div class="col-sm-4">
+
+            <p class="input-group">
+              <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="appCtrl.entity.LEADDateFrom"
+                is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false"
+              />
+              <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+            </p>
+
+
+            <!--<uib-datepicker ng-model="vm.entity.LEADDateFrom" datepicker-options="{showWeeks: false}"></uib-datepicker>-->
+            <!--<input type="datetime" datetimepicker class="form-control" ng-model="vm.entity.LEADDateFrom" />-->
+          </div>
+          <label for="inputEmail3" class="col-sm-2 control-label">To Date</label>
+          <div class="col-sm-4">
+
+
+            <p class="input-group">
+              <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="appCtrl.entity.LEADDateTo"
+                is-open="opened" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false"
+              />
+              <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+            </p>
+
+            <!--<input type="datetime" datetimepicker class="form-control" ng-model="vm.entity.LEADDateTo" />-->
+          </div>
+        </div>
+
+
+        <h3 class="with-line">Contact Detail On Leave Period</h3>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Contact Name</label>
+          <div class="col-sm-4">
+            <input type="text" class="form-control" ng-model="appCtrl.entity.LEADContactName" placeholder="Enter Contact Name" />
+          </div>
+
+          <label for="inputEmail3" class="col-sm-2 control-label">Contact Number</label>
+          <div class="col-sm-4">
+
+            <input type="text" class="form-control" ng-model="appCtrl.entity.LEADContactNo" placeholder="Enter Contact Number" />
+          </div>
+
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Address</label>
+          <div class="col-sm-4">
+            <textarea type="text" class="form-control" ng-model="appCtrl.entity.LEADAddress" placeholder="Enter Address" />
+          </div>
+        </div>
+        <div class="form-group" ng-show="vm.isLeaveTransactionTable">
+          <table class="table table-bordered table-hover table-condensed">
+            <thead>
+              <tr>
+                <th>Leave Type</th>
+                <th>Creadit Leave</th>
+                <th>Debit Leave</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="transactionList in vm.leaveTypeSelectOptions.data">
+                <td>{{transactionList.LTName}}</td>
+                <td>{{transactionList.ELTLeaveCr}}</td>
+                <td>{{transactionList.ELTLeaveDr}}</td>
+              </tr>
+            </tbody>
+          </table>
+
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-3 col-sm-9">
+            <button type="submit" class="btn btn-warning">Save</button>
+            <button type="button" class="btn btn-danger" ng-click="back()">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </form>
+
+  </div>
+
+</div>
+<!--<div ng-hide="addCtrl.isLoading"><i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<form class="form-horizontal" name="editForm" ng-submit="appCtrl.saveForm(editForm)">
  <div ba-panel ba-panel-class="xmedium-panel" ba-panel-title="Leave List">
    
       <div class="content-box-wrapper">
@@ -87,7 +221,11 @@
   </div>
 
 </form>
- 
+ -->
+
+
+
+
 
 <!--
 <form class="form-horizontal" name="editForm" ng-submit="appCtrl.saveForm(editForm)">
