common table structure program:dj

--- a/src/app/pages/organization/masters/templates/designation/designation-list.html
+++ b/src/app/pages/organization/masters/templates/designation/designation-list.html
@@ -1,50 +1,3 @@
-<table class="table table-bordered table-hover table-condensed" st-table="displayedCollection" st-safe-src="rows" st-pagination-scroll>
-    <thead>
-        <tr class="sortable">
-            <td class="table-id">Sno</td>
-            <td st-sort="DesgName" class="col-sm-3">Designation</td>
-            <td class="col-sm-3">Description</td>
-            <td class="col-sm-2">Is Administrator</td>
-            <td class="col-sm-2">Is Manager</td>
-            <td class="table-id">Actions</td>
-        </tr>
-        <tr>
-            <th></th>
-            <th><input st-search="DesgName" placeholder="Search by Location" class="input-sm form-control search-input" type="search"
-                /></th>
-            <th colspan="4"><input st-search="" placeholder="Global Search" class="input-sm form-control search-input" type="search" /></th>
-        </tr>
-    </thead>
-    <tbody ng-show="displayedCollection.length>0">
-        <tr ng-repeat="row in displayedCollection" class="editable-row">
-            <td>
-                {{$index+1}}
-            </td>
-            <td> {{ row.DesgName || '' }} </td>
-            <td> {{ row.DesgDesc || '' }} </td>
-            <td> {{ row.DesgIsAdministrator || '' }} </td>
-            <td> {{ row.DesgIsManager || '' }} </td>
-            <td class="col-md-3">
-                <a ui-sref="organization.masters.edit({name:listCtrl.tempName, pageId: listCtrl.pageId, action:'edit', pkId:row.DesgId})">
-                    <i class="ion-edit"></i></a>
-            </td>
-        </tr>
-    </tbody>
-    <tbody ng-show="displayedCollection.length<=0&&!isLoaded">
-        <tr>
-            <td colspan="6">No {{listCtrl.page.pageinfo.title}} found</td>
-        </tr>
-    </tbody>
-    <tbody ng-show="isLoading">
-        <tr>
-            <td colspan="6">Loading {{listCtrl.page.pageinfo.title}} Please wait..</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="6" class="text-center">
-                <div st-pagination="" st-items-by-page="10" st-displayed-pages="5"></div>
-            </td>
-        </tr>
-    </tfoot>
-</table>
+<div ng-controller="orgMasterDesignController as lmCtrl" >
+    <ng-include src="listCtrl.listTemplateUrlPath"></ng-include>
+</div>
