--- a/src/app/pages/organization/masters/templates/grades/grades-list.html
+++ b/src/app/pages/organization/masters/templates/grades/grades-list.html
@@ -1,39 +1,3 @@
-<table class="table table-bordered table-hover table-condensed">
-    <thead>
-        <tr class="sortable">
-            <td class="table-id">Sno</td>
-            <td>Grade Name</td>
-            <td>Description</td>
-            <td class="col-md-3">Actions</td>
-        </tr>
-    </thead>
-    <tbody ng-show="rows.length>0">
-        <tr ng-repeat="row in rows" class="editable-row">
-            <td>
-                {{$index+1}}
-            </td>
-            <td>
-                <span editable-text="row.EmpGradeName" e-name="EmpGradeName" e-form="rowform" e-required>
-          {{ row.EmpGradeName || '' }}
-        </span>
-            </td>
-            <td>
-                <span editable-text="row.EmpGradeDesc" e-name="EmpGradeDesc" e-form="rowform" e-required>
-          {{ row.EmpGradeDesc || '' }}
-        </span>
-            </td>
-
-            <td class="col-md-3">
-                <div include-with-scope="app/pages/organization/masters/list/action.html"></div>
-            </td>
-        </tr>
-    </tbody>
-    <tbody ng-show="rows.length<=0&&!isLoaded">
-        <tr>
-            <td colspan="4">No {{listCtrl.page.pageinfo.title}} found</td>
-        </tr>
-    </tbody>
-    <tbody ng-show="isLoading">
-        <tr><td colspan="4">Loading {{listCtrl.page.pageinfo.title}} Please wait..</td></tr>
-    </tbody>
-</table>
+<div ng-controller="orgMasterGradesController as lmCtrl" >
+    <ng-include src="listCtrl.listTemplateUrlPath"></ng-include>
+</div>
