--- a/src/app/pages/organization/masters/templates/location/location-list.html
+++ b/src/app/pages/organization/masters/templates/location/location-list.html
@@ -1,50 +1,3 @@
-<table class="table table-bordered table-hover table-condensed" st-table="displayedCollection" st-safe-src="rows" st-pagination-scroll>
-    <thead>
-        <tr class="sortable">
-            <th st-sort="$index" class="col-sm-1">Sno</th>
-            <th st-sort="LocationName" class="col-sm-3">Location Name</th>
-            <th st-sort="CityName" class="col-sm-2">City</th>
-            <th st-sort="StateName" class="col-sm-2">State</th>
-            <th st-sort="CountryName" class="col-sm-2">Country</th>
-            <th class="col-sm-1">Actions</th>
-        </tr>
-        <tr>
-            <th></th>
-            <th><input st-search="LocationName" placeholder="Search by Location" class="input-sm form-control search-input" type="search"
-                /></th>
-            <th colspan="4"><input st-search="" placeholder="Global Search" class="input-sm form-control search-input" type="search" /></th>
-        </tr>
-    </thead>
-    <tbody ng-show="displayedCollection.length>0">
-        <tr ng-repeat="row in displayedCollection" class="editable-row">
-            <td>
-                {{$index+1}}
-            </td>
-            <td> {{ row.LocationName || '' }} </td>
-            <td> {{ row.CityName || '' }} </td>
-            <td> {{ row.StateName || '' }} </td>
-            <td> {{ row.CountryName || '' }} </td>
-            <td style="width: 50px">
-                <a ui-sref="organization.masters.edit({name:listCtrl.tempName, pageId: listCtrl.pageId, action:'edit', pkId:row.LocationId})">
-                    <i class="ion-edit"></i></a>
-            </td>
-        </tr>
-    </tbody>
-    <tbody ng-show="displayedCollection.length<=0&&!isLoaded">
-        <tr>
-            <td colspan="6">No {{listCtrl.page.pageinfo.title}} found</td>
-        </tr>
-    </tbody>
-    <tbody ng-show="isLoading">
-        <tr>
-            <td colspan="6">Loading {{listCtrl.page.pageinfo.title}} Please wait..<i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i></td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="6" class="text-center">
-                <div st-pagination="" st-items-by-page="10" st-displayed-pages="5"></div>
-            </td>
-        </tr>
-    </tfoot>
-</table>
+<div ng-controller="orgMasterLocationController as lmCtrl" >
+    <ng-include src="listCtrl.listTemplateUrlPath"></ng-include>
+</div>
