--- a/src/app/pages/form/layouts/widgets/blockForm.html
+++ b/src/app/pages/form/layouts/widgets/blockForm.html
@@ -1,14 +1,20 @@
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-4">
     <div class="form-group">
       <label for="inputFirstName">First Name</label>
       <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
     </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-4">
     <div class="form-group">
       <label for="inputLastName">Last Name</label>
       <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+    </div>
+  </div>
+   <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputFirstName">Email</label>
+      <input type="email" class="form-control" id="inputEmail" placeholder="Email">
     </div>
   </div>
 </div>
