--- a/src/app/pages/loan/masters/list/mastersList.html
+++ b/src/app/pages/loan/masters/list/mastersList.html
@@ -8,7 +8,7 @@
       <span class="select-all-label">Select All</span>
     </label>
     <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i></button>
-    <button type="button" class="btn  btn-icon refresh-button" ui-sref="loan.masters.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})"><i class="ion-add"></i>Add</button>
+    <button type="button" class="btn  btn-icon refresh-button" ui-sref="loan.loanmanagement.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})"><i class="ion-add"></i>Add</button>
     <div class="btn-group" uib-dropdown>
       <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
