--- a/src/app/pages/leave/applications/add/add.html
+++ b/src/app/pages/leave/applications/add/add.html
@@ -70,32 +70,32 @@
           <label for="inputEmail3" class="col-sm-2 control-label">From Date</label>
           <div class="col-sm-4">
 
-            <p class="input-group">
-              <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="appCtrl.entity.LEADDateFrom"
+            <!--<p class="input-group">
+              <input type="datetime" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="appCtrl.entity.LEADDateFrom"
                 is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false"
               />
               <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
-            </p>
+            </p>-->
 
 
             <!--<uib-datepicker ng-model="vm.entity.LEADDateFrom" datepicker-options="{showWeeks: false}"></uib-datepicker>-->
-            <!--<input type="datetime" datetimepicker class="form-control" ng-model="vm.entity.LEADDateFrom" />-->
+            <input type="datetime" datetimepicker class="form-control" ng-model="appCtrl.entity.LEADDateFrom" />
           </div>
           <label for="inputEmail3" class="col-sm-2 control-label">To Date</label>
           <div class="col-sm-4">
 
 
-            <p class="input-group">
-              <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="appCtrl.entity.LEADDateTo"
+            <!--<p class="input-group">
+              <input type="datetime" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="appCtrl.entity.LEADDateTo"
                 is-open="opened" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
               <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
-            </p>
+            </p>-->
 
-            <!--<input type="datetime" datetimepicker class="form-control" ng-model="vm.entity.LEADDateTo" />-->
+            <input type="datetime" datetimepicker class="form-control" ng-model="appCtrl.entity.LEADDateTo" />
           </div>
         </div>
 
