--- a/src/app/pages/organization/employee/add/employeeAdd.html
+++ b/src/app/pages/organization/employee/add/employeeAdd.html
@@ -1,6 +1,7 @@
 
+ <div ba-panel ba-panel-class="x-medium" ba-panel-title="Add Employee">
 <div class="row">
-   <div ba-panel ba-panel-class="large-panel" ba-panel-title="Employee Leave Application">
+  
    <div class="col-sm-1">
     <div class="form-group">   
       <label for="title">Title</label>    
