--- a/src/app/pages/loan/masters/add/add.html
+++ b/src/app/pages/loan/masters/add/add.html
@@ -1,4 +1,4 @@
-<div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
+<!--<div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
   <div class="mail-messages-control side-message-navigation-item">
     <div class="toggle-navigation-container">
       <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
@@ -12,4 +12,4 @@
     <ng-include src="addCtrl.templateUrlPath" onload="addCtrl.tempLoaded=true"></ng-include>
     <span ng-show="(addCtrl.templateUrlPath=='')">Template URL is empty</span>
   </div>
-</div>
+</div>-->
