--- a/src/app/pages/loan/masters/list/action.html
+++ b/src/app/pages/loan/masters/list/action.html
@@ -9,4 +9,4 @@
 <div class="buttons" ng-show="!rowform.$visible">
     <button class="btn btn-primary editable-table-button btn-xs" ng-click="rowform.$show()">Edit</button>
 </div>-->
-<a><i class="fa fa-pencil-square-o"></i></a>
+<!--<a><i class="fa fa-pencil-square-o"></i></a>-->
