--- a/src/app/pages/loan/masters/list/table-loading.html
+++ b/src/app/pages/loan/masters/list/table-loading.html
@@ -1,4 +1,4 @@
-<tbody ng-show="rows.length<=0&&!isLoaded">
+<!--<tbody ng-show="rows.length<=0&&!isLoaded">
     <tr>
         <td colspan="4">No {{listCtrl.page.pageinfo.title}} found</td>
     </tr>
@@ -7,4 +7,4 @@
     <tr>
         <td colspan="4">Loading {{listCtrl.page.pageinfo.title}} Please wait..</td>
     </tr>
-</tbody>
+</tbody>-->
