--- a/src/app/pages/organization/masters/templates/category/category-add.html
+++ b/src/app/pages/organization/masters/templates/category/category-add.html
@@ -3,10 +3,10 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Level</label>
+                <label for="inputEmail3" class="col-sm-3 control-label">Category </label>
                 <div class="col-sm-9">
                     <input name="CategoryName" ng-model="addCtrl.entity.CategoryName" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Employment Type" text-only-with-space>
+                        placeholder="Enter Category" text-only-with-space>
                 </div>
             </div>
             <div class="form-group">
