--- a/src/app/pages/organization/masters/templates/designation/designation-add.html
+++ b/src/app/pages/organization/masters/templates/designation/designation-add.html
@@ -5,14 +5,14 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Designation</label>
                 <div class="col-sm-9">
-                    <input name="DesgName" ng-model="addCtrl.entity.DesgName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Branch Name"
+                    <input name="DesgName" ng-model="addCtrl.entity.DesgName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Designation"
                         text-only-with-space >
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <input name="DesgDesc" ng-model="addCtrl.entity.DesgDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Branch Name"
+                    <input name="DesgDesc" ng-model="addCtrl.entity.DesgDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
                         text-only-with-space >
                 </div>
             </div>
