--- a/src/app/pages/loan/loanmanagement/add/add.html
+++ b/src/app/pages/loan/loanmanagement/add/add.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!--<div class="row">
   <div class="col-md-12">
     <form class="form-horizontal" name="editForm" ng-submit="appCtrl.saveForm(editForm)">
       <div ba-panel ba-panel-class="large-panel" ba-panel-title="Employee Leave Application">
@@ -345,4 +345,4 @@
   </div>
 
   </div>
-  </form>-->
+  </form>-->-->
