--- a/src/app/pages/loan/masters/list/mastersList.html
+++ b/src/app/pages/loan/masters/list/mastersList.html
@@ -1,4 +1,4 @@
-<div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
+<!--<div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
   <div class="mail-messages-control side-message-navigation-item">
     <div class="toggle-navigation-container">
       <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
@@ -24,4 +24,4 @@
     <span class="font-bold">{{listCtrl.page.pageinfo.title}}</span>
   </div>
   <ng-include src="listCtrl.templateUrlPath"></ng-include>
-</div>
+</div>-->
