--- a/src/app/pages/organization/masters/templates/department/department-add.html
+++ b/src/app/pages/organization/masters/templates/department/department-add.html
@@ -6,14 +6,14 @@
                 <label for="inputEmail3" class="col-sm-3 control-label">Department</label>
                 <div class="col-sm-9">
                     <input name="DeptName" ng-model="addCtrl.entity.DeptName" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Branch Name" text-only-with-space>
+                        placeholder="Enter Department" text-only-with-space>
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
                     <input name="DeptDesc" ng-model="addCtrl.entity.DeptDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Branch Name" text-only-with-space>
+                        placeholder="Enter Description" text-only-with-space>
                 </div>
             </div>
 
