--- a/src/app/pages/organization/masters/templates/gender/gender-add.html
+++ b/src/app/pages/organization/masters/templates/gender/gender-add.html
@@ -3,7 +3,7 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Level</label>
+                <label for="inputEmail3" class="col-sm-3 control-label">Gender</label>
                 <div class="col-sm-9">
                     <input name="GenderName" ng-model="addCtrl.entity.GenderName" type="text" ng-required="true" class="form-control" id="inputEmail3"
                         placeholder="Enter Gender" text-only-with-space>
