--- a/src/app/pages/organization/masters/templates/marital/marital-add.html
+++ b/src/app/pages/organization/masters/templates/marital/marital-add.html
@@ -3,7 +3,7 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Grade</label>
+                <label for="inputEmail3" class="col-sm-3 control-label">Marital Status</label>
                 <div class="col-sm-9">
                     <input name="MaritalName" ng-model="addCtrl.entity.MaritalName" type="text" ng-required="true" class="form-control" id="inputEmail3"
                         placeholder="Enter Marital Status" text-only-with-space>
