--- a/src/app/pages/organization/masters/templates/sub-unit/sub-unit-add.html
+++ b/src/app/pages/organization/masters/templates/sub-unit/sub-unit-add.html
@@ -5,7 +5,7 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-4 control-label">Unit Name</label>
                 <div class="col-sm-8">
-                    <input name="SUName" ng-model="addCtrl.entity.SUName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Branch Name"
+                    <input name="SUName" ng-model="addCtrl.entity.SUName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Unit Name"
                         text-only-with-space >
                 </div>
             </div>
