--- a/src/app/pages/organization/masters/templates/designation/designation-add.html
+++ b/src/app/pages/organization/masters/templates/designation/designation-add.html
@@ -17,17 +17,17 @@
                 </div>
             </div>
              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Is Administrator</label>
+                <label for="inputEmail3" class="col-sm-3 control-label">Administrator</label>
                 <div class="col-sm-9">
-                    <input name="DesgIsAdministrator" ng-model="addCtrl.entity.DesgIsAdministrator" type="checkbox" 
-                     class="form-control" id="inputEmail3"  
+                    <input style=" width: auto; box-shadow: none;" name="DesgIsAdministrator" ng-model="addCtrl.entity.DesgIsAdministrator" type="checkbox" 
+                     class="form-control " id="inputEmail3"  
                         text-only-with-space >
                 </div>
             </div>
              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Is Manager</label>
+                <label for="inputEmail3" class="col-sm-3 control-label">Manager</label>
                 <div class="col-sm-9">
-                    <input name="DesgIsManager" ng-model="addCtrl.entity.DesgIsManager" type="checkbox" 
+                    <input style=" width: auto; box-shadow: none;" name="DesgIsManager" ng-model="addCtrl.entity.DesgIsManager" type="checkbox" 
                      class="form-control" id="inputEmail3"  
                         text-only-with-space >
                 </div>
