--- a/src/app/pages/organization/masters/templates/relationship/relationship-add.html
+++ b/src/app/pages/organization/masters/templates/relationship/relationship-add.html
@@ -6,7 +6,7 @@
                 <label for="inputEmail3" class="col-sm-3 control-label">Relationship Name</label>
                 <div class="col-sm-9">
                     <input name="RelationshipName" ng-model="addCtrl.entity.RelationshipName" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Relationship Name" text-only-with-space>
+                        placeholder="Enter Relationship Name">
                 </div>
             </div>
 
