--- a/src/app/pages/organization/masters/templates/branch/branch-add.html
+++ b/src/app/pages/organization/masters/templates/branch/branch-add.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-md-6">
 
-        <form class="form-horizontal" name="editForm" ng-submit="bmAddCtrl.saveForm(editForm)">
+        <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Branch Name</label>
                 <div class="col-sm-9">
-                    <input name="BRName" ng-model="bmAddCtrl.entity.BRName" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Branch Name" text-only-with-space>
+                    <input name="BRName" ng-model="addCtrl.entity.BRName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                        placeholder="Enter Branch Name">
                 </div>
             </div>
             <div class="form-group">
@@ -21,7 +21,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
-                    <button type="button" class="btn btn-danger" ui-sref="back('organization.masters.list')">Cancel</button>
+                    <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
                 </div>
             </div>
         </form>
