--- a/src/app/pages/organization/masters/templates/emptype/emptype-add.html
+++ b/src/app/pages/organization/masters/templates/emptype/emptype-add.html
@@ -3,7 +3,7 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">employment Type</label>
+                <label for="inputEmail3" class="col-sm-3 control-label">Employment Type</label>
                 <div class="col-sm-9">
                     <input name="EmploymentName" ng-model="addCtrl.entity.EmploymentName" type="text" ng-required="true" class="form-control" id="inputEmail3"
                         placeholder="Enter Employment Type" text-only-with-space>
