--- a/src/app/pages/organization/masters/templates/levels/levels-add.html
+++ b/src/app/pages/organization/masters/templates/levels/levels-add.html
@@ -13,7 +13,7 @@
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
                     <input name="EmpLevelDesc" ng-model="addCtrl.entity.EmpLevelDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Description" text-only-with-space>
+                        placeholder="Enter Description">
                 </div>
             </div>
 
