--- a/src/app/pages/organization/masters/templates/location/location-add.html
+++ b/src/app/pages/organization/masters/templates/location/location-add.html
@@ -6,7 +6,7 @@
                 <label for="inputEmail3" class="col-sm-3 control-label">Location</label>
                 <div class="col-sm-9">
                     <input name="LocationName" ng-model="addCtrl.entity.LocationName" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Location Name" text-only-with-space>
+                        placeholder="Enter Location Name">
                 </div>
             </div>
             <div class="form-group">
