--- a/src/app/pages/organization/masters/templates/qualification/qualification-add.html
+++ b/src/app/pages/organization/masters/templates/qualification/qualification-add.html
@@ -3,23 +3,23 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Qualification</label>
-                <div class="col-sm-9">
+                <label for="inputEmail3" class="col-sm-4 control-label">Qualification</label>
+                <div class="col-sm-8">
                     <input name="QualificationName" ng-model="addCtrl.entity.QualificationName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Qualification"
                         >
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
-                <div class="col-sm-9">
+                <label for="inputEmail3" class="col-sm-4 control-label">Description</label>
+                <div class="col-sm-8">
                     <input name="QualificationDesc" ng-model="addCtrl.entity.QualificationDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
                          >
                 </div>
             </div>
              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Is Post Graduate</label>
-                <div class="col-sm-9">
-                    <input name="QualificationIsPostGraduate" ng-model="addCtrl.entity.QualificationIsPostGraduate" type="checkbox" 
+                <label for="inputEmail3" class="col-sm-4 control-label">Post Graduate</label>
+                <div class="col-sm-8">
+                    <input style=" width: auto; box-shadow: none;" name="QualificationIsPostGraduate" ng-model="addCtrl.entity.QualificationIsPostGraduate" type="checkbox" 
                      class="form-control" id="inputEmail3"  
                         text-only-with-space >
                 </div>
@@ -28,7 +28,7 @@
             
 
             <div class="form-group">
-                <div class="col-sm-offset-3 col-sm-9">
+                <div class="col-sm-offset-4 col-sm-8">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
                     <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
                 </div>
