--- a/src/app/pages/organization/masters/templates/titles/titles-add.html
+++ b/src/app/pages/organization/masters/templates/titles/titles-add.html
@@ -6,14 +6,14 @@
                 <label for="inputEmail3" class="col-sm-3 control-label">Title Name</label>
                 <div class="col-sm-9">
                     <input name="TitleName" ng-model="addCtrl.entity.TitleName" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Title Name" text-only-with-space>
+                        placeholder="Enter Title Name">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
                     <input name="TitleDesc" ng-model="addCtrl.entity.TitleDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Description" text-only-with-space>
+                        placeholder="Enter Description">
                 </div>
             </div>
 
